# cmake-practice-source-code

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt  COPYRIGHT  README  runhello.sh
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/src/: CMakeLists.txt
